Implemented CRUD for Watchlist

--- a/StockMarketPortfolio.API/appsettings.json
+++ b/StockMarketPortfolio.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "StockPortfolioConnectionString": "Server=localhost;Database=StockMarketDb;User Id=sa;Password=sa;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
